--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&display=swap" rel="stylesheet">
 
     <!--
       manifest.json provides metadata used when your web app is installed on a
